[project]
name = "saas_python_lib"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor França Lopes",email = "18534956+vflopes@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "coverage (>=7.13.1,<8.0.0)",
    "ruff (>=0.14.10,<0.15.0)"
]

# [project.optional-dependencies]